--- a/Azengaard/Azengaard.ini
+++ b/Azengaard/Azengaard.ini
@@ -6,7 +6,7 @@ Author = Josh Clue
 
 Description = The mod starts in the circus tent in Athkatla and lets you face Sarevok and other foes again. A second component enhances the Trademeet crypt
 
-Homepage = none
+Homepage = https://baldursextendedworld.com/Branched-EET-Updates-2/
 
 Forum = http://baldursextendedworld.com/Vanilla_Forums/categories/mod-help
  
